# cgrep

./: README.md  cgrep.cabal  cgreprc
DEBIAN/equivs/: cgrep-jessie.cfg
app/: Main.hs
lib/: CLI.hs  Debug.hs  Paths.hs
lib/CGrep/: CGrep.hs  CLI.hs  Common.hs  Context.hs  Distance.hs  Filter.hs  Lang.hs  Output.hs  Token.hs  Types.hs
lib/CGrep/CLI/: CmdOptions.hs  Config.hs  Options.hs
lib/CGrep/Parser/: Token.hs  WildCard.hs
lib/CGrep/Parser/Cpp/: Token.hs
lib/CGrep/Parser/Generic/: Token.hs
lib/CGrep/Strategy/: BoyerMoore.hs  Levenshtein.hs  Regex.hs
lib/CGrep/Strategy/Cpp/: Semantic.hs  Tokenizer.hs
lib/CGrep/Strategy/Generic/: Semantic.hs
lib/CGrep/Utils/: Debug.hs  Misc.hs  Reader.hs
test/: CMakeLists.txt  test.chpl  test.coffee  test.cpp  test.erl  test.fs  test.html  test.js  test.lua  test.ml  test.php3  test.pl  test.py  test.rb  test.sh  test.tex
