name:                   cgrep
description:            Cgrep: a context-aware grep for source codes
version:                6.6.17
synopsis:               Command line tool
homepage:               http://awgn.github.io/cgrep/
license:                GPL-2
license-file:           LICENSE
author:                 Nicola Bonelli
maintainer:             Nicola Bonelli <nicola@pfq.io>
category:               Utils
stability:              Experimental
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       lib
  exposed-modules:      CLI
                        Debug
                        Options
                        CmdOptions
                        Util
                        Config
                        Reader
                        CGrep.Lang
                        CGrep.Filter
                        CGrep.Token
                        CGrep.Types
                        CGrep.CGrep
                        CGrep.Output
                        CGrep.Distance
                        CGrep.Common
                        CGrep.Context
                        CGrep.Parser.WildCard
                        CGrep.Parser.Generic.Token
                        CGrep.Parser.Token
                        CGrep.Parser.Cpp.Token
                        CGrep.Strategy.Generic.Semantic
                        CGrep.Strategy.Levenshtein
                        CGrep.Strategy.BoyerMoore
                        CGrep.Strategy.Cpp.Tokenizer
                        CGrep.Strategy.Cpp.Semantic
                        CGrep.Strategy.Regex
  other-modules:        Paths_cgrep
  build-depends:        base < 5.0
                      , cmdargs              >= 0.10
                      , bytestring           >= 0.10
                      , directory            >= 1.2
                      , filepath             >= 1.3
                      , stm                  >= 2.1
                      , containers           >= 0.5
                      , array                >= 0.4
                      , ghc-prim             >= 0.2
                      , dlist                >= 0.3
                      , ansi-terminal        >= 0.5
                      , split                >= 0.2
                      , safe                 >= 0.3
                      , stringsearch         >= 0.3
                      , unordered-containers >= 0.1
                      , regex-base           >= 0.90
                      , regex-posix          >= 0.90
                      , regex-pcre           >= 0.90
                      , either               >= 4.0
                      , mtl                  >= 2.0
                      , unix-compat          >= 0.4
                      , async                >= 2.0
                      , utf8-string
                      , unicode-show
                      , transformers
                      , process
  default-extensions:   CPP
  other-extensions:     DeriveDataTypeable
                      , ViewPatterns
                      , MagicHash
                      , BangPatterns
                      , FlexibleInstances
                      , FlexibleContexts
                      , PatternGuards
  ghc-options:          -O2 -Wall
  default-language:     Haskell2010

executable cgrep
  main-is:              Main.hs
  hs-source-dirs:       app
  build-depends:        base < 5.0, cgrep
  ghc-options:          -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
